disable font-face fonts for now as they are causing a bunch of flickering and fixing that will take a while

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,6 +18,10 @@ font-family: 'Museo Slab 500', Rockwell, Georgia, serif; font-weight: 500;
 /* Outer frame */
 body        { margin: 0 auto; width: 1004px; }
 .main       { font-family: 'Proxima Nova Regular', 'Helvetica Neue', Arial, Helvetica, sans-serif; font-size-adjust: 0.488; font-weight: 400; min-height: 100%; }
+
+/* @todo temporary overrides */
+.main       { font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif; font-size-adjust: 0.488; font-weight: 400; min-height: 100%; }
+
 .sidebar    { background-color: #74b446; box-shadow: inset 2px 0 7px #333; height: 100%; margin-left: 768px; min-width: 256px; position: fixed; top: 0; }
 .sidebar li   { margin-bottom: 10px; }
 
@@ -25,7 +29,9 @@ body        { margin: 0 auto; width: 1004px; }
 .siteFooter { background-color: #f7f7f2; height: 5px; }
 .siteFooter a { visibility: hidden; }
 
-.primaryNav { border-top: #fff 2px solid; border-bottom: #fff 2px solid; padding: 10px 0; }
+.primaryNav { border-top: #fff 2px solid; border-bottom: #fff 2px solid; padding: 10px 0; position: relative; }
+.primaryNav .nav-prev
+, .primaryNav .nav-next { position: absolute; top: 0; right: 0; }
 .primaryNav ul          { margin-left: 2px; }
 .primaryNav li a        { color: #333; display: block; padding-left: 20px; }
 .primaryNav li a:active { background-color: transparent; color: #fff; }
@@ -55,9 +61,18 @@ body        { margin: 0 auto; width: 1004px; }
 .fMS {font-family: 'Museo Slab 300', Rockwell, Georgia, serif; font-weight: 300; }
 .fMS.bold { font-family: 'Museo Slab 500', Rockwell, Georgia, serif; font-weight: 500; }
 
+/* @todo temporary overrides */
+.fMS {font-family: Rockwell, Georgia, serif; font-weight: 300; }
+.fMS.bold { font-family: Rockwell, Georgia, serif; font-weight: 500; }
+
 /* Styles */
 .light  { font-family: 'Proxima Nova Light', 'Helvetica Neue', Arial, Helvetica, sans-serif; font-size-adjust: 0.488; font-weight: 200; }
 .bold   { font-family: 'Proxima Nova Semibold', 'Helvetica Neue', Arial, Helvetica, sans-serif; font-weight: 600; }
+
+/* @todo temporary overrides */
+.light  { font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif; font-size-adjust: 0.488; font-weight: 200; }
+.bold   { font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif; font-weight: 600; }
+
 .tTU    { text-transform: uppercase; }
 .tTC    { text-transform: capitalize; }
 
@@ -80,7 +95,7 @@ body        { margin: 0 auto; width: 1004px; }
 /* Block */
 .block  { display: inline-block; margin: 10px; overflow: hidden; position: relative; vertical-align: top; }
 .block.clickable            { cursor: pointer; }
-.block.clickable:hover      { box-shadow: 1px 1px 5px #888; top: 1px; }
+.block.clickable:hover      { box-shadow: 1px 1px 5px #888, -1px 0 5px #888; top: 1px; }
 .block .block               { height: 100%; margin: 0 10px; }
 .block .block:first-child   { margin-left: 0; }
 .block .block:last-child    { margin-right: 0; }
@@ -97,7 +112,7 @@ body        { margin: 0 auto; width: 1004px; }
 .textBlock  { border-bottom: #888 1px solid; }
 
 .highlightBlock .img    { width: 100%;   position: absolute; top: 0; left: 0; }
-.highlightBlock .veil   { background-color: rgba(255, 255, 255, .7); border: #ccc 1px solid; border-top-style: none; position: absolute; bottom: 0; left: 0; width: 100%; }
+.highlightBlock .veil   { background-color: rgba(255, 255, 255, .7); border: #ccc 1px solid; border-top-style: none; position: absolute; bottom: 0; left: 0; width: 100%; padding: 3px; }
 .highlightBlock.clickable:hover .veil { background-color: rgba(255, 255, 255, .8); }
 
 .profileBlock .img      { float: left; margin-right: 10px; padding: 5px 0; width: 75px; height: auto; }
